data/derived/comb/progs/unify/prog4776.ml.out
Characters 187-188:
  | Average (e1,e2) -> ((eval(e1,x,y) +. eval(e2,x,y)) /. 2)
                                                          ^
Error: This expression has type int but an expression was expected of type
         float
